--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
 		"*.scss": "postcss",
 		"*.css": "tailwindcss",
 	},
-	"editor.wordWrap": "on"
+	"editor.wordWrap": "on",
+	"editor.formatOnSave": false,
+	"editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "never"
+    },
 }
