--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,11 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
     "noEmit": true,
     "isolatedModules": true,
+    "types": ["vite/client", "@types/wicg-file-system-access"],
+	"allowJs": true,
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
   },
 }
