--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.26.0",
     "@types/wicg-file-system-access": "^2023.10.5",
+    "highlight.js": "^11.9.0",
     "markdown-it": "^14.0.0",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-deflist": "^3.0.0",
+    "md-to-pdf": "^5.2.4",
+    "solid-codemirror": "^2.3.1",
     "solid-js": "^1.8.11"
   }
 }
