Markdown-Bundler, Tooltip and Directory Acccess

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,6 @@
 	"editor.codeActionsOnSave": {
         "source.fixAll.eslint": "never"
     },
+	"typescript.preferences.quoteStyle": "double",
+	"javascript.preferences.quoteStyle": "double",
 }
