--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Markdown preview with use of folders",
   "type": "module",
   "scripts": {
+    "test": "jest",
+    "testc": "jest --coverage",
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
@@ -18,6 +20,7 @@
   ],
   "devDependencies": {
     "@iconify-icon/solid": "^2.0.0",
+    "@types/jest": "^29.5.12",
     "@types/markdown-it": "^13.0.7",
     "@types/markdown-it-attrs": "^4.1.3",
     "@types/wicg-file-system-access": "^2023.10.5",
@@ -26,9 +29,12 @@
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-plugin-solid": "^0.13.1",
+    "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "solid-devtools": "^0.29.2",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
@@ -37,7 +43,6 @@
     "markdown-it": "^14.0.0",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-deflist": "^3.0.0",
-    "md-to-pdf": "^5.2.4",
     "solid-js": "^1.8.11"
   }
 }
