--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "solid-devtools": "^0.29.2",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -40,9 +41,12 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.26.0",
     "markdown-it": "^14.0.0",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-deflist": "^3.0.0",
+    "solid-codemirror": "^2.3.1",
     "solid-js": "^1.8.11"
   }
 }
