--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "solidjs"
   ],
   "devDependencies": {
+    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-markdown": "^6.2.4",
     "@iconify-icon/solid": "^2.0.0",
     "@types/jest": "^29.5.12",
     "@types/markdown-it": "^13.0.7",
@@ -41,12 +43,19 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.15.0",
+    "@codemirror/commands": "^6.3.3",
+    "@codemirror/language": "^6.10.1",
+    "@codemirror/language-data": "^6.4.1",
+    "@codemirror/lint": "^6.5.0",
+    "@codemirror/search": "^6.5.6",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.26.0",
     "markdown-it": "^14.0.0",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-deflist": "^3.0.0",
     "solid-codemirror": "^2.3.1",
-    "solid-js": "^1.8.11"
+    "solid-js": "^1.8.11",
+    "style-mod": "^4.1.2"
   }
 }
